--- a/contact/contact.html
+++ b/contact/contact.html
@@ -16,28 +16,20 @@
     <img src="../image/linkedin.png" alt="linkedin"><br>
     <a href="https://www.linkedin.com/feed/update/urn:li:activity:7169678320425492480/">linkedin</a>
 
-    <table border="2">
-        <tr>
-            <th>Name</th>
-            <th>Grade</th>
-            <th>School</th>
-            <th>Address</th>
-            <th>Board</th>
-        </tr>
-        <tr>
-            <td>Emaan</td>
-            <td>9th</td>
-            <td>GGH</td>
-            <td>Peshawar</td>
-            <td>BISEP</td>
-        </tr>
-        <tr>
-            <td>Haya</td>
-            <td>11th</td>
-            <td>FGC</td>
-            <td>Peshawar</td>
-            <td>BISEP</td>
-        </tr>
-    </table>
+    <form>
+        <fieldset>
+            <legend>Feedback Form</legend>
+            <label>
+            Name <input type="text" placeholder="first name">&nbsp;
+                  <input type="text" placeholder="last name"><br><br>
+            Company <input type="text"><br><br>
+            Email <input type="email" placeholder="example@gmail.com"><br><br>
+            </label>
+            <textarea name="" id="" cols="30" rows="20">Write Feedback........</textarea><br><br>
+            <label>
+            Are you an exesting customer?  <input type="radio" checked>Yes <input type="radio">No
+            </label>
+        </fieldset>
+    </form>
 </body>
 </html>
