--- a/skill/skill.html
+++ b/skill/skill.html
@@ -42,6 +42,21 @@
             <td>Peshawar</td>
             <td>BISEP</td>
         </tr>
-    </table>
+    </table><br><br><br>
+
+
+    <div>
+        <h1>Im learning Web Development from SMIT</h1><br><br>
+        <h1>Google Maps</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.8326385340565!2d71.48923940919181!3d33.99683232054583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38d9177c76c3d4a7%3A0x6fe8100e4171db75!2sSMIT%20%7C%20Aziz%20Jan%20Mass%20IT%20Training%20Peshawar!5e0!3m2!1sen!2s!4v1710932785836!5m2!1sen!2s" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+         <video src="httpsoutu://y.be/iramZ1B4oyg?si=Q4YoGCD8e2Tt7Dqs"></video>
+    </div><br><br><br>
+    <h1>Video</h1>
+    <video src="../video/video.mp4" height="300" controls autoplay></video><br><br><br>
+    <h2>Audio</h2>
+    <audio src="../Audio/Audio.mp4" controls autoplay></audio>
+
+
+
 </body>
 </html>
