--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <h1>Portfolio</h1>
 <p>My name is Emaan </p>
 <img src="./image/emaan.jpg" alt="Emaan" width=" 300" >
+<h2>Audio</h2>
+<audio src="../Audio/audio.mp3" controls autoplay></audio>
 
 <table border="2">
     <tr>
