--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">home page</a>
-    <a href="../skill/skill.html">skill page</a>
-    <a href="../project/project.html">project page</a>
+    <header>
+        <nav>
+            <a href="../index.html">home page</a>
+            <a href="../skill/skill.html">skill page</a>
+            <a href="../project/project.html">project page</a>
+        </nav>
+    </header>
+   
     <hr>
     <h1>contact</h1>
     <img src="../image/email.png" alt="email here"> <br>
@@ -31,5 +37,8 @@
             </label>
         </fieldset>
     </form>
+    <footer >
+        <p ><b>All Rights Reserved &copy; Portfolio By Eman.</b></p>
+    </footer>
 </body>
 </html>
