--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title> portfolio page</title>
+   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<a href="./skill/skill.html">skill page</a>
-<a href="./project/project.html">project page</a>
-<a href="./contact/contact.html">contact page</a>
+    <header>
+        <nav>
+            <a href="./skill/skill.html">skill page</a>
+            <a href="./project/project.html">project page</a>
+            <a href="./contact/contact.html">contact page</a>
+        </nav>
+    </header>
+
 <hr>
 <h1>Portfolio</h1>
 <p>My name is Emaan </p>
@@ -17,7 +23,7 @@
 <h2>Audio</h2>
 <audio src="../Audio/audio.mp3" controls autoplay></audio>
 
-<table border="2">
+  <table class="table" border="2">
     <tr>
         <th>Name</th>
         <th>Grade</th>
@@ -40,6 +46,8 @@
         <td>BISEP</td>
     </tr>
 </table>
-
+<footer >
+    <p ><b>All Rights Reserved &copy; Portfolio By Eman.</b></p>
+</footer>
 </body>
 </html>
