--- a/skill/skill.html
+++ b/skill/skill.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>skill</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">home page</a>
-    <a href="../contact/contact.html">contact page</a>
-    <a href="../project/project.html">project page</a>
+    <header>
+        <nav>
+            <a href="../index.html">home page</a>
+            <a href="../contact/contact.html">contact page</a>
+            <a href="../project/project.html">project page</a>
+        </nav>
+    </header>
+    
     <hr>
     <h1>Skill</h1>
     <ul>
@@ -55,7 +61,9 @@
     <video src="../video/video.mp4" height="300" controls autoplay></video><br><br><br>
    
 
-
+    <footer >
+        <p ><b>All Rights Reserved &copy; Portfolio By Eman.</b></p>
+    </footer>
 
 </body>
 </html>
