--- a/project/project.html
+++ b/project/project.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">home page</a>
-    <a href="../skill/skill.html">skill page</a>
-    <a href="../contact/contact.html">contact page</a>
+    <header>
+        <nav>
+            <a href="../index.html">home page</a>
+            <a href="../skill/skill.html">skill page</a>
+            <a href="../contact/contact.html">contact page</a>
+        </nav>
+    </header>
+   
     <hr>
     <h1>Project</h1>
     <ul>
@@ -40,6 +46,8 @@
             <td>BISEP</td>
         </tr>
     </table>
-    
+    <footer >
+        <p ><b>All Rights Reserved &copy; Portfolio By Eman.</b></p>
+    </footer>
 </body>
 </html>
